<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="120dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/last_use" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/edit"
            android:id="@+id/list_edit"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/list_user_name"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/user_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/list_user_group"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/user_group" />
    </LinearLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="fill_parent"
        android:id="@+id/user_image"
        android:src="@drawable/user" />

</LinearLayout>