<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context="app.shome.ir.shome.SettingActivity">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:id="@+id/scanHub" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/radar1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:id="@+id/layout">
        </RelativeLayout>

    </RelativeLayout>


    <EditText
        style="@style/InputTextStyle"
        android:id="@+id/ip"
        android:hint="@string/ip" />

    <!--<EditText-->
        <!--style="@style/InputTextStyle"-->
        <!--android:id="@+id/portNum"-->
        <!--android:hint="@string/poetnum" />-->

    <Button
        android:text="@string/check_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkconnection" />
    <Button
        android:text="@string/server_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start" />

</LinearLayout>
